--- a/.harness/test2.yaml
+++ b/.harness/test2.yaml
@@ -21,5 +21,9 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "on"
+        targetRules:
+        - targets:
+          - identifier: python_githubaction
+          variation: "true"
   projectIdentifier: python_githubaction
   orgIdentifier: default
