--- a/.harness/test2.yaml
+++ b/.harness/test2.yaml
@@ -1,6 +1,27 @@
 featureFlags:
   flags:
   - flag:
+      name: featureflagvalue2
+      identifier: featureflagvalue2
+      description: ""
+      permanent: false
+      spec:
+        type: boolean
+        default:
+          onVariation: "false"
+          offVariation: "false"
+        variations:
+        - identifier: "true"
+          value: "true"
+        - identifier: "false"
+          value: "false"
+      environments:
+      - identifier: env
+        default:
+          onVariation: "false"
+          offVariation: "false"
+        state: "off"
+  - flag:
       name: githubaction
       identifier: githubaction
       description: ""
