--- a/.harness/test2.yaml
+++ b/.harness/test2.yaml
@@ -20,7 +20,7 @@ featureFlags:
         default:
           onVariation: "false"
           offVariation: "false"
-        state: "on"
+        state: "off"
   - flag:
       name: githubaction
       identifier: githubaction
