--- a/.harness/test2.yaml
+++ b/.harness/test2.yaml
@@ -21,6 +21,10 @@ featureFlags:
           onVariation: "false"
           offVariation: "false"
         state: "on"
+        targetRules:
+        - targets:
+          - identifier: python_githubaction
+          variation: "true"
   - flag:
       name: githubaction
       identifier: githubaction
