Update pipeline test1

--- a/.harness/test1.yaml
+++ b/.harness/test1.yaml
@@ -6,3 +6,12 @@ pipeline:
   tags: {}
   stages:
     - test1: 1
+    - stage:
+        name: stages2
+        identifier: stages2
+        description: ""
+        type: Pipeline
+        spec:
+          org: default
+          pipeline: test1_Clone
+          project: python_githubaction
