Update application to reflect disabled state of feature flag

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,16 +28,18 @@ jobs:
         id: flag_status
         run: |
           # Command to fetch the status of the feature flag and store it in an environment variable
-          # Replace the command with your actual implementation
-          export FLAG_STATUS=$(python get_flag_status.py)
+          export GITHUBACTION_STATUS=$(python get_flag_status.py githubaction)
+          export FEATUREFLAGVALUE2_STATUS=$(python get_flag_status.py featureflagvalue2)
 
       # Run tests based on the status of the feature flag
       - name: Run Tests
         run: |
-          if [ "$FLAG_STATUS" = "on" ]; then
+         if [ "$GITHUBACTION_STATUS" = "1" ] or [ "$FEATUREFLAGVALUE2_STATUS" = "1" ]; then
             # Run tests that should be executed when the feature flag is 'on'
             pytest tests/feature_enabled_tests.py
-          else
+          elif
             # Run tests that should be executed when the feature flag is 'off'
             pytest tests/feature_disabled_tests.py
-          fi
+          else
+            # Run tests that should be executed when the feature flag is not set
+            pytest tests/feature_not_set_tests.py
