--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,24 +3,15 @@ on:
   push:
     branches:
       - main
-
 jobs:
   test:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
       - name: Run Tests
-        run: |
-          pytest featureflag/test.py
+        run: pytest featureflag/test.py
