--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install -r requirements.txt
           pip install pytest  # Install pytest
 
       - name: Run Tests
