--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,6 +21,10 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install pytest  # Install pytest
+      # Set up Django settings module
+      - name: Set up Django settings module
+        run: |
+         export DJANGO_SETTINGS_MODULE=githubaction.settings
 
       - name: Run Tests
         run: pytest featureflag/test.py
