update requirement.txt again rest added

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,4 @@ jobs:
          export DJANGO_SETTINGS_MODULE=githubaction.settings
 
       - name: Run Tests
-        run: pytest featureflag/test.py
+        run: python manage.py test featureflag
